Set up code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: go
 
 env:
   - GO111MODULE=on
-  
+
 script:
- - go test .
+ - go test . -race -cover -coverprofile=coverage.txt
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
