--- a/.github/workflows/github-actions-go.yml
+++ b/.github/workflows/github-actions-go.yml
@@ -6,7 +6,6 @@ on:
   pull_request:
     branches: [ main ]
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,4 +21,11 @@ jobs:
       run: go build -v .
 
     - name: Test
-      run: go test -v . -race
+      run: go test -v . -race -cover -coverprofile=coverage.txt
+
+    - name: Upload coverage report
+      uses: codecov/codecov-action@v2
+      with:
+        file: ./coverage.txt
+        fail_ci_if_error: true
+        verbose: true
